Redistribución: cada pantalla, un trabajo, y las personas pasan a ser lugares
El tablero concentraba la mitad de la aplicación: la lista completa de gente,
las solicitudes, el historial, cuatro modales, once llamadas al servidor y diez
secciones en una plantilla. Explorar, mientras tanto, hacía una sola llamada y
era un duplicado de esa misma lista con filtros. Ese reparto es el que produjo el
fallo del 90-contra-83 de hace dos commits: dos caminos para lo mismo no se
mantienen sincronizados solos.

LAS PERSONAS SON LUGARES

La ficha de alguien era un panel flotante incrustado a la vez en el tablero y en
Explorar. Eso significa que una persona no tenía sitio propio: no había URL a la
que enlazar, el botón "atrás" del navegador no hacía lo esperable, no se podía
compartir ni volver. Es lo que más separaba esto de una red social y lo que menos
costaba arreglar.

Ahora hay /u/:id, y /yo lleva a la tuya. Verte como te ven es distinto de
editarte, y hasta ahora solo existía lo segundo. El backend deja de rechazar tu
propio perfil —lo hacía con un "tu propio perfil se edita, no se visita" que
tenía sentido cuando la ficha solo era la tarjeta de un desconocido— y en su
lugar omite la compatibilidad, que contigo mismo no significa nada: un 0 % en tu
propia página se leería como un juicio.

De paso, el formulario de perfil se muda del tablero a tu página. Había dos
sitios desde los que tocar tu perfil y ninguno era tu perfil.

UNA SOLA LISTA

Se borra explorarComunidad y su endpoint. Explorar usa la misma lista que usaba
el tablero, con los estados ya puestos, así que la tarjeta pasa a tener tres
botones —Escribir, Retirar, Conectar— en vez de asumir que todo el mundo es un
desconocido. Y al conectar, la persona se queda en la lista cambiando de estado
en vez de desaparecer: hacer desaparecer a alguien justo al conectar con él es lo
contrario de lo que acabas de hacer.

Borrar el segundo camino es mejor que la prueba que escribí para vigilarlo. Esa
prueba se reconvierte en l